Fix dropdown spacing

--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -73,17 +73,20 @@
   #add {
     font-weight: 600;
     cursor: default;
+    padding-left: 5px;
   }
 
   .track-dropdown-menu {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-top: 20px;
+    padding-top: 15px;
+    margin-right: 8px;
     
     li {
-      padding-top: 7px;
-      padding-bottom: 7px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      padding-left: 5px;
       width: 100%;
     }
 
